--- a/sourse/pug/blocks/header-block/_header-block.pug
+++ b/sourse/pug/blocks/header-block/_header-block.pug
@@ -2,6 +2,20 @@ mixin header-block()
 	// start header-block
 	+b.header-block#header-block
 		.container
-			h1 header-block
 			.row
+				.col.order-md-last
+					+e.img-wrap
+						img.res-i(src="img/@2x/header-img.png", alt="")
+						+b.garanty.d-none.d-sm-block
+							+icon('garanty')
+							+e.title Гарантнии
+							+e.text На сейф #[strong 5 лет],
+								br
+								| на замки #[strong 1 год]
+						+e.price от 2.500 Р.
+				.col-lg-6.col-md-8
+					h1 Сейфы для денег, ценностей, документов и&nbsp;оружия&nbsp;&mdash; более  100&nbsp;вариантов
+					h3 Самые  #[strong востребованные модели всегда в&nbsp;наличии], другие доставим  в&nbsp;течение недели
+					+e.btn.scroll-link(href="#s-qwiz") Подобрать сейф по параметрам
+		 
 	// end header-block
