--- a/sourse/pug/blocks/header-block/_header-block.scss
+++ b/sourse/pug/blocks/header-block/_header-block.scss
@@ -1,7 +1,90 @@
 .header-block {
 	display: block;
- 
-	
+	@include bgs;
+	background-image: url(../img/@2x/header-bg.jpg);
+	padding-top: rem(62);
+	padding-bottom: rem(35);
+
+	h1 {
+		line-height: 1.13;
+		// Text style for "С, ейфы дл"
+		letter-spacing: rem(0.8px);
+		max-width: rem(470);
+		margin-bottom: rem(28);
+	}
+
+	h3,
+	.h3 {
+		max-width: rem(470);
+		line-height: 1.4;
+		letter-spacing: rem(0.5px);
+		margin-bottom: rem(38);
+	}
+
+	&__btn {
+		@extend .btn;
+		@extend .btn-lg;
+		// @extend .btn-block;
+
+		@extend .btn-blue;
+		max-width: rem(394);
+		@include mt;
+		margin-bottom: rem(30);
+
+		&:hover {
+			transform: translateY(#{rem(-5)});
+		}
+
+		&:active,
+		&:focus {
+			transform: translateY(0);
+
+		}
+	}
+
+	&__price {
+		text-align: center;
+		@extend .h5;
+		letter-spacing: rem(0.4px);
+		line-height: 1.4;
+
+		border-radius: $border-radius-lg;
+		background-color: #ffffff;
+		position: absolute;
+		top: rem(290);
+		left: 0;
+		padding: rem(12) rem(19);
+		font-weight: 600;
+	}
+
+	&__img-wrap {
+		@include media-breakpoint-up(xl) {
+
+			margin-left: rem(-95);
+			margin-right: rem(-50);
+		}
+
+		@include media-breakpoint-up(lg) {
+
+			margin-right: rem(-80);
+
+		}
+
+		@include media-breakpoint-up(md) {
+
+			margin-right: rem(-80);
+
+			margin-left: rem(-30);
+			margin-top: rem(70);
+			margin-bottom: 0;
+		}
+
+		margin-bottom: rem(30);
+
+		margin-left: rem(-90);
+		margin-right: rem(-160);
+	}
+
 	// 
 	@include media-breakpoint-up(xl) {}
 
@@ -37,4 +120,30 @@
 	@include media-breakpoint-down(sm) {}
 
 	@include media-breakpoint-down(xs) {}
+}
+
+.garanty {
+	text-align: center;
+	@extend .h5;
+	letter-spacing: rem(0.4px);
+	line-height: 1.4;
+
+	border-radius: $border-radius-lg;
+	background-color: #ffffff;
+	position: absolute;
+	top: rem(5);
+	left: 0;
+	width: rem(208);
+	padding: rem(40) 0 rem(30);
+
+	.icon {
+		font-size: rem(47);
+		color: #0b4290;
+		margin-bottom: rem(10);
+	}
+
+	&__title {
+		color: #0a418f;
+		margin-bottom: rem(5);
+	}
 }
