--- a/sourse/pug/pages/index.pug
+++ b/sourse/pug/pages/index.pug
@@ -8,6 +8,7 @@ include ../blocks/s-catalog/_s-catalog.pug
 include ../blocks/s-pdf/_s-pdf.pug
 include ../blocks/s-steps/_s-steps.pug
 include ../blocks/s-video/_s-video.pug
+include ../blocks/s-qwiz/_s-qwiz.pug
 
 block variables
 	- let  mainPage= null
@@ -20,6 +21,7 @@ block pagecontent
 		+top-line()
 		+top-nav()
 	+header-block()
+	+s-qwiz
 	+s-category
 	+s-catalog
 	+s-pdf
