--- a/sourse/sass/_vars.scss
+++ b/sourse/sass/_vars.scss
@@ -222,7 +222,7 @@ $table-caption-color: $text-muted !default;
 $table-bg-level: -9 !default;
 $table-border-level: -6 !default;
 
-
+$border-radius-lg: rem(10) !default;
 // Buttons + Forms
 //
 // Shared variables that are reassigned to `$input-` and `$btn-` specific variables.
@@ -242,9 +242,9 @@ $input-btn-padding-x-sm: .5rem !default;
 $input-btn-font-size-sm: $font-size-sm !default;
 // $input-btn-line-height-sm:    $line-height-sm !default;
 
-$input-btn-padding-y-lg: .5rem !default;
+$input-btn-padding-y-lg: 1.7rem !default;
 $input-btn-padding-x-lg: 1rem !default;
-$input-btn-font-size-lg: $font-size-lg !default;
+$input-btn-font-size-lg: $h5-font-size !default;
 // $input-btn-line-height-lg:    $line-height-lg !default;
 
 // $input-btn-border-width:      $border-width !default;
@@ -276,9 +276,9 @@ $btn-font-weight: $font-weight-normal !default;
 $btn-box-shadow: inset 0 1px 0 rgba($white, .15),
 0 1px 1px rgba($black, .075) !default;
 $btn-focus-width: $input-btn-focus-width !default;
-// $btn-focus-box-shadow:        $input-btn-focus-box-shadow !default;
+$btn-focus-box-shadow: !default;
 $btn-disabled-opacity: .65 !default;
-$btn-active-box-shadow: inset 0 3px 5px rgba($black, .125) !default;
+$btn-active-box-shadow: none !default;
 
 $btn-link-disabled-color: $gray-600 !default;
 
@@ -286,7 +286,7 @@ $btn-block-spacing-y: .5rem !default;
 
 // Allows for customizing button radius independently from global border radius
 // $btn-border-radius:           $border-radius !default;
-// $btn-border-radius-lg:        $border-radius-lg !default;
+$btn-border-radius-lg: $border-radius-lg !default;
 // $btn-border-radius-sm:        $border-radius-sm !default;
 
 $btn-transition: color .15s ease-in-out,
