add padding in .section-title

--- a/sourse/pug/blocks/s-category/_s-category.pug
+++ b/sourse/pug/blocks/s-category/_s-category.pug
@@ -3,7 +3,8 @@ mixin s-category()
 	+b.SECTION.s-category.section#s-category&attributes(attributes)
 		.container
 			+b.section-title.text-center
-				h2 s-category
+				h2 Выберите сейф для дома или офиса
+				.h3 Доставляем по&nbsp;Магнитогорску в&nbsp;день заказа&nbsp;&mdash; все модели в&nbsp;наличии
 				
 			.row
 	// end s-category
