--- a/sourse/pug/blocks/s-qwiz/_s-qwiz.pug
+++ b/sourse/pug/blocks/s-qwiz/_s-qwiz.pug
@@ -5,5 +5,5 @@ mixin s-qwiz()
 			+b.section-title.text-center
 				h2 Ответьте на&nbsp;4&nbsp;вопроса и&nbsp;#[strong получите подборку сейфов,]  подходящих именно вам
 				
-			.row
+			+b.qwiz-block
 	// end s-qwiz
