--- a/sourse/pug/pages/index.pug
+++ b/sourse/pug/pages/index.pug
@@ -22,7 +22,7 @@ block pagecontent
 		+top-nav()
 	+header-block()
 	+s-qwiz
-	+s-category
+	+s-category()(class="section-border ")
 	+s-catalog
 	+s-pdf
 	+s-steps
