--- a/sourse/pug/pages/24-error.pug
+++ b/sourse/pug/pages/24-error.pug
@@ -8,23 +8,21 @@ include ../blocks/s-catalog/_s-catalog.pug
 include ../blocks/s-pdf/_s-pdf.pug
 include ../blocks/s-steps/_s-steps.pug
 include ../blocks/s-video/_s-video.pug
-include ../blocks/s-shipping/_s-shipping.pug
+include ../blocks/s-error/_s-error.pug
 
 block variables
 	- let  mainPage= null
 block title
-	- let  title= 'Доставка и оплата'
+	- let  title= '404'
 	title= title
 block pagecontent 
 	//- +mob-mnu()
 	+header()
 		+top-line()
 		+top-nav()
-	+page-head("Главная", title)
-		.text-center
-			h1 Доставим ваш заказ в любую точку Магнитогорска
-	+
-	+s-shipping
-	+s-form()
+	//- +page-head("Главная", title)
+	+s-error
+	//- +s-shipping
+	//- +s-form()
 	//- +s-video
 	+footer()
