--- a/sourse/pug/pages/index.pug
+++ b/sourse/pug/pages/index.pug
@@ -21,9 +21,11 @@ block pagecontent
 		+top-line()
 		+top-nav()
 	+header-block()
-	+s-qwiz
+	+s-qwiz()(class="section-border ")
 	+s-category()(class="section-border ")
-	+s-catalog
+	+s-catalog(class="section-border ")
+		+b.section-title.text-center
+			h2 Самые популярные модели сейфов
 	+s-pdf
 	+s-steps
 	+s-form()
