--- a/sourse/pug/blocks/header-block/_header-block.pug
+++ b/sourse/pug/blocks/header-block/_header-block.pug
@@ -15,7 +15,7 @@ mixin header-block()
 						+e.price от 2.500 Р.
 				.col-lg-6.col-md-8
 					h1 Сейфы для денег, ценностей, документов и&nbsp;оружия&nbsp;&mdash; более  100&nbsp;вариантов
-					h3 Самые  #[strong востребованные модели всегда в&nbsp;наличии], другие доставим  в&nbsp;течение недели
+					p Самые  #[strong востребованные модели всегда в&nbsp;наличии], другие доставим  в&nbsp;течение недели
 					+e.btn.scroll-link(href="#s-qwiz") Подобрать сейф по параметрам
 		 
 	// end header-block
