--- a/sourse/pug/blocks/s-catalog/_s-catalog.scss
+++ b/sourse/pug/blocks/s-catalog/_s-catalog.scss
@@ -1,29 +1,71 @@
+// start .s-catalog
+.s-catalog {
+	&__slider {
+		margin-left: -15px;
+		margin-right: -15px;
+	}
 
-	// start .s-catalog
-	.s-catalog {
-		 
+	&__slide {
+		padding-left: 15px;
+		padding-right: 15px;
+		margin-bottom: rem(44);
+	}
+
+	&__footer-text {
+		max-width: rem(320);
+		font-weight: 300;
+		line-height: 1.29;
+		// Text style for "*При оформ"
+		letter-spacing: rem(0.34px);
+		color: #111111;
+		font-family: "Open Sans";
+		margin-bottom: rem(20);
+
+		a {
+			@extend .link-body;
+		}
+	}
+
+	.slick-dots {
+		padding-top: rem(10);
+	}
+
 	@include media-breakpoint-up(xl) {}
+
 	@include media-breakpoint-up(lg) {}
+
 	@include media-breakpoint-up(md) {}
+
 	@include media-breakpoint-up(sm) {}
+
 	@include media-breakpoint-up(xs) {}
-	
+
 	//
-	@include media-breakpoint-between(md, xl) { }
-	
-	
+	@include media-breakpoint-between(md, xl) {}
+
+
 	//
 	@include media-breakpoint-only(xs) {}
+
 	@include media-breakpoint-only(sm) {}
+
 	@include media-breakpoint-only(md) {}
+
 	@include media-breakpoint-only(lg) {}
+
 	@include media-breakpoint-only(xl) {}
-	
+
 	//
 	@include media-breakpoint-down(xl) {}
-	@include media-breakpoint-down(lg) {}
-	@include media-breakpoint-down(md) {}
-	@include media-breakpoint-down(sm) {}
-	@include media-breakpoint-down(xs) {} 
 
-} // end.s-catalog
+	@include media-breakpoint-down(lg) {}
+
+	@include media-breakpoint-down(md) {}
+
+	@include media-breakpoint-down(sm) {}
+
+	@include media-breakpoint-down(xs) {}
+
+}
+
+// end.s-catalog
