--- a/sourse/pug/blocks/s-category/_s-category.scss
+++ b/sourse/pug/blocks/s-category/_s-category.scss
@@ -1,29 +1,166 @@
+// start .s-category
+.s-category {
+	.row {
+		@include media-breakpoint-up(md) {
 
-	// start .s-category
-	.s-category {
-		 
+			display: grid;
+			grid-template-columns: 1fr 1fr 1fr;
+			margin-left: 0;
+			margin-right: 0;
+			// grid-gap: 12px;
+		}
+
+		@include roww(6);
+	}
+
+	&__title {
+		@extend h3;
+		margin-bottom: rem(25);
+	}
+
+	&__item {
+		@extend h5;
+		margin-bottom: 0;
+		line-height: 1.4;
+		font-weight: normal;
+		position: relative;
+		// display: block;
+		display: flex;
+		flex-direction: column;
+		// height: 100%;
+		width: 100%;
+		background-color: rgba(2, 29, 66, 1);
+
+		@include media-breakpoint-up(lg) {
+
+			padding: rem(40) rem(40) rem(30);
+		}
+
+		padding: rem(20);
+		padding-right: rem(20);
+		color: #ffffff !important;
+		text-decoration: none !important;
+
+		&:hover {
+			img {
+				opacity: 0.12;
+			}
+		}
+
+		img {
+			position: absolute;
+			left: 0;
+			top: 0;
+			width: 100%;
+			height: 100%;
+			z-index: -1;
+			opacity: 0.3;
+			@include mt;
+		}
+	}
+
+	&__col {
+		@include media-breakpoint-up(md) {
+
+			padding: 0;
+
+
+			// margin-bottom: 0;
+		}
+
+		margin-bottom: rem(12);
+
+		@include media-breakpoint-up(xl) {
+			min-height: rem(280);
+		}
+
+		@include media-breakpoint-up(sm) {}
+
+		min-height: rem(240);
+		display: flex;
+
+		&:first-child {
+			@include media-breakpoint-up(md) {
+
+				grid-row-start: 1;
+
+				grid-row-end: 3;
+				grid-column-start: 1;
+				grid-column-end: 2;
+			}
+
+			max-width: 100%;
+			width: 100%;
+		}
+
+		&:nth-child(2) {
+			@include media-breakpoint-up(md) {
+
+				grid-row-start: 1;
+
+				grid-row-end: 2;
+				grid-column-start: 2;
+				grid-column-end: 4;
+			}
+
+			max-width: 100%;
+			width: 100%;
+		}
+
+		&:nth-child(3),
+		&:nth-child(4) {
+			@include media-breakpoint-only(sm) {
+				max-width: 50%;
+			}
+		}
+	}
+
+	&__count {
+		font-weight: 300;
+		border-bottom: 1px dashed;
+		cursor: pointer;
+
+		&:hover {
+			border-color: transparent;
+		}
+	}
+
 	@include media-breakpoint-up(xl) {}
+
 	@include media-breakpoint-up(lg) {}
+
 	@include media-breakpoint-up(md) {}
+
 	@include media-breakpoint-up(sm) {}
+
 	@include media-breakpoint-up(xs) {}
-	
+
 	//
-	@include media-breakpoint-between(md, xl) { }
-	
-	
+	@include media-breakpoint-between(md, xl) {}
+
+
 	//
 	@include media-breakpoint-only(xs) {}
+
 	@include media-breakpoint-only(sm) {}
+
 	@include media-breakpoint-only(md) {}
+
 	@include media-breakpoint-only(lg) {}
+
 	@include media-breakpoint-only(xl) {}
-	
+
 	//
 	@include media-breakpoint-down(xl) {}
-	@include media-breakpoint-down(lg) {}
-	@include media-breakpoint-down(md) {}
-	@include media-breakpoint-down(sm) {}
-	@include media-breakpoint-down(xs) {} 
 
-} // end.s-category
+	@include media-breakpoint-down(lg) {}
+
+	@include media-breakpoint-down(md) {}
+
+	@include media-breakpoint-down(sm) {}
+
+	@include media-breakpoint-down(xs) {}
+
+}
+
+// end.s-category
