--- a/sourse/pug/blocks/s-form/_s-form.pug
+++ b/sourse/pug/blocks/s-form/_s-form.pug
@@ -2,8 +2,24 @@ mixin s-form()
 	// start s-form
 	+b.s-form.section.block-with-lazy#s-form&attributes(attributes)
 		.container
-			+b.section-title.text-center
-				h2 s-form
-				
 			.row
+
+				.col-lg-7
+					+b.section-title
+						h2 Получите консультацию по&nbsp;интересующим моделям  сейфов
+					+e.img-wrap.d-none.d-lg-block
+						img.lazy.res-i(src="#" data-src="img/@2x/man.png", alt="")
+						+e.label
+							+e.label-name Александр Сикерин
+							+e.label-prof руководитель 
+				.col
+					p Здравствуйте! Меня зовут Александр, я&nbsp;директор ООО &laquo;Комплексные технологии&raquo;. Мы&nbsp;реализуем сейфы с&nbsp;1990&nbsp;года, знаем о&nbsp;них все. 
+
+					p Готовы ответить на&nbsp;любой ваш вопрос по&nbsp;будням с&nbsp;10:00 до&nbsp;18:00. Оставьте номер телефона, наш специалист вам перезвонит.
+					p И&nbsp;обещаю: мы&nbsp;не&nbsp;присылаем смс с&nbsp;рекламой и&nbsp;не&nbsp;докучаем звонками:) Только консультация.
+					+form-wrap("Получить каталог и прайс")
+						+form-tabs() 
+						+inputName()
+						+e.btn(type="submit") Получить консультацию
+						+polite
 	// end s-form
