--- a/sourse/pug/blocks/s-form/_s-form.scss
+++ b/sourse/pug/blocks/s-form/_s-form.scss
@@ -1,27 +1,124 @@
 .s-form {
+	background-color: #f7f7f7;
+
+	@include media-breakpoint-up(lg) {
+
+		padding-bottom: 0 !important;
+	}
+
+	&__img-wrap {
+		margin-left: rem(15);
+		margin-right: rem(-15);
+
+		img {}
+	}
+
+	.section-title {
+		padding-bottom: rem(20);
+	}
+
+	h2 {
+		max-width: rem(460);
+		line-height: 1.21;
+	}
+
+	p {
+		@extend .h5;
+		font-weight: normal;
+		line-height: 1.4;
+		margin-right: rem(-20);
+		margin-bottom: rem(25);
+	}
+
+	.form-wrap {
+		&__input {
+			background-color: #f7f7f7;
+		}
+
+		&__polite {
+			@include media-breakpoint-down(md) {
+				margin-left: auto;
+				margin-right: auto;
+				text-align: center;
+			}
+		}
+
+		@include media-breakpoint-up(lg) {
+
+			max-width: rem(360);
+		}
+	}
+
+	&__label {
+		@include a-cent(y);
+		left: 0;
+		@extend .h6;
+		font-weight: normal;
+		left: rem(80);
+		text-align: right;
+		margin-top: rem(100);
+
+		&-name {
+			font-weight: 600;
+			color: #ffffff;
+			text-align: center;
+			padding: rem(22) rem(28);
+			border-radius: 5px;
+			background-color: $accent;
+			position: relative;
+			z-index: 2;
+
+			// display: inline-block;
+			text-align: center;
+		}
+
+		&-prof {
+			display: inline-block;
+			text-align: center;
+			color: #404040;
+			padding: rem(20) rem(28);
+			border-radius: 5px;
+			background-color: #f1f1f1;
+			margin-top: rem(-10);
+			margin-right: rem(-20);
+		}
+	}
+
 	//
 	@include media-breakpoint-up(xl) {}
+
 	@include media-breakpoint-up(lg) {}
+
 	@include media-breakpoint-up(md) {}
+
 	@include media-breakpoint-up(sm) {}
+
 	@include media-breakpoint-up(xs) {}
-	
+
 	//
-	@include media-breakpoint-between(md, xl) { }
-	
-	
+	@include media-breakpoint-between(md, xl) {}
+
+
 	//
 	@include media-breakpoint-only(xs) {}
+
 	@include media-breakpoint-only(sm) {}
+
 	@include media-breakpoint-only(md) {}
+
 	@include media-breakpoint-only(lg) {}
+
 	@include media-breakpoint-only(xl) {}
-	
+
 	//
 	@include media-breakpoint-down(xl) {}
+
 	@include media-breakpoint-down(lg) {}
+
 	@include media-breakpoint-down(md) {}
+
 	@include media-breakpoint-down(sm) {}
-	@include media-breakpoint-down(xs) {} 
+
+	@include media-breakpoint-down(xs) {}
 
 }
