--- a/sourse/pug/blocks/s-steps/_s-steps.scss
+++ b/sourse/pug/blocks/s-steps/_s-steps.scss
@@ -1,29 +1,97 @@
+// start .s-steps
+.s-steps {
+	text-align: center;
 
-	// start .s-steps
-	.s-steps {
-		 
+	img {
+		height: rem(96px);
+		margin-bottom: rem(38);
+	}
+
+	p {
+		@extend h5;
+		margin-bottom: rem(18);
+		line-height: 1.4;
+		margin-left: auto;
+		margin-right: auto;
+		max-width: rem(315);
+	}
+
+	strong {
+		@extend h3;
+		font-weight: bold;
+	}
+
+	&__item {
+		border: 1px solid #e4e4e4;
+		max-width: rem(407);
+		margin-left: auto;
+		margin-right: auto;
+
+		@include media-breakpoint-up(sm) {
+			height: 100%;
+			margin-bottom: 0;
+		}
+
+		margin-bottom: rem(30);
+
+		@include media-breakpoint-up(md) {
+
+			padding: rem(90) rem(20) rem(53);
+		}
+
+		padding: rem(40) rem(15) rem(23);
+		@include mt;
+
+		&:hover {
+			box-shadow: 1px 4px 35px rgba(154, 187, 206, 0.17);
+			border: 1px solid #0b4290;
+		}
+	}
+
+
+
+	&__inner {
+		margin-left: auto;
+		margin-right: auto;
+		max-width: rem(940);
+	}
+
 	@include media-breakpoint-up(xl) {}
+
 	@include media-breakpoint-up(lg) {}
+
 	@include media-breakpoint-up(md) {}
+
 	@include media-breakpoint-up(sm) {}
+
 	@include media-breakpoint-up(xs) {}
-	
+
 	//
-	@include media-breakpoint-between(md, xl) { }
-	
-	
+	@include media-breakpoint-between(md, xl) {}
+
+
 	//
 	@include media-breakpoint-only(xs) {}
+
 	@include media-breakpoint-only(sm) {}
+
 	@include media-breakpoint-only(md) {}
+
 	@include media-breakpoint-only(lg) {}
+
 	@include media-breakpoint-only(xl) {}
-	
+
 	//
 	@include media-breakpoint-down(xl) {}
-	@include media-breakpoint-down(lg) {}
-	@include media-breakpoint-down(md) {}
-	@include media-breakpoint-down(sm) {}
-	@include media-breakpoint-down(xs) {} 
 
-} // end.s-steps
+	@include media-breakpoint-down(lg) {}
+
+	@include media-breakpoint-down(md) {}
+
+	@include media-breakpoint-down(sm) {}
+
+	@include media-breakpoint-down(xs) {}
+
+}
+
+// end.s-steps
