--- a/sourse/sass/_vars.scss
+++ b/sourse/sass/_vars.scss
@@ -242,8 +242,8 @@ $input-btn-padding-x-sm: .5rem !default;
 $input-btn-font-size-sm: $font-size-sm !default;
 // $input-btn-line-height-sm:    $line-height-sm !default;
 
-$input-btn-padding-y-lg: 1.7rem !default;
-$input-btn-padding-x-lg: 1rem !default;
+$input-btn-padding-y-lg: 1.34rem !default;
+$input-btn-padding-x-lg: 1.44rem !default;
 $input-btn-font-size-lg: $h5-font-size !default;
 // $input-btn-line-height-lg:    $line-height-lg !default;
 
@@ -285,8 +285,8 @@ $btn-link-disabled-color: $gray-600 !default;
 $btn-block-spacing-y: .5rem !default;
 
 // Allows for customizing button radius independently from global border radius
-// $btn-border-radius:           $border-radius !default;
-$btn-border-radius-lg: $border-radius-lg !default;
+$btn-border-radius: $border-radius-lg !default;
+$btn-border-radius-lg: rem(2) !default;
 // $btn-border-radius-sm:        $border-radius-sm !default;
 
 $btn-transition: color .15s ease-in-out,
@@ -325,7 +325,7 @@ $input-border-color: $gray-400 !default;
 $input-box-shadow: inset 0 1px 1px rgba($black, .075) !default;
 
 // $input-border-radius:                   $border-radius !default;
-// $input-border-radius-lg:                $border-radius-lg !default;
+$input-border-radius-lg: rem(2) !default;
 // $input-border-radius-sm:                $border-radius-sm !default;
 
 $input-focus-bg: $input-bg !default;
@@ -334,7 +334,7 @@ $input-focus-color: $input-color !default;
 $input-focus-width: $input-btn-focus-width !default;
 // $input-focus-box-shadow:                $input-btn-focus-box-shadow !default;
 
-$input-placeholder-color: $gray-600 !default;
+$input-placeholder-color: #9b9b9b !default;
 $input-plaintext-color: $body-color !default;
 
 // $input-height-border:                   $input-border-width * 2 !default;
