s-shipping-and-payment done

--- a/public/img/svg/_sprite.scss
+++ b/public/img/svg/_sprite.scss
@@ -21,6 +21,10 @@
 	font-size:(500/10)*1rem;
 	width:(500/500)*1em;
 }
+.icon-fire {
+	font-size:(33/10)*1rem;
+	width:(24/33)*1em;
+}
 .icon-garanty {
 	font-size:(457/10)*1rem;
 	width:(457/457)*1em;
