--- a/sourse/pug/blocks/s-shipping-and-payment/_s-shipping-and-payment.scss
+++ b/sourse/pug/blocks/s-shipping-and-payment/_s-shipping-and-payment.scss
@@ -17,7 +17,7 @@
 				background-color: $accent;
 				color: #ffffff;
 				padding: rem(18);
-				text-align: center;
+				// text-align: center;
 
 			}
 
