--- a/sourse/pug/pages/05-shipping.pug
+++ b/sourse/pug/pages/05-shipping.pug
@@ -25,6 +25,6 @@ block pagecontent
 		.text-center
 			h1 Доставим ваш заказ в любую точку Магнитогорска
 	+s-shipping-and-payment
-	+s-form()
+	+s-form2()
 	//- +s-video
 	+footer()
