--- a/sourse/pug/pages/06-payment.pug
+++ b/sourse/pug/pages/06-payment.pug
@@ -24,7 +24,7 @@ block pagecontent
 	+page-head("Главная", title)
 		.text-center
 			h1 Доставим ваш заказ в любую точку Магнитогорска
-	+s-shipping-and-payment2
+	//- +s-shipping-and-payment2
 	+s-form()
 	//- +s-video
 	+footer()
