--- a/sourse/sass/_vars.scss
+++ b/sourse/sass/_vars.scss
@@ -887,9 +887,9 @@ $custom-file-text: (en: "Browse"
 
 // $breadcrumb-margin-bottom:          1rem !default;
 
-// $breadcrumb-bg:                     $gray-200 !default;
-// $breadcrumb-divider-color:          $gray-600 !default;
-// $breadcrumb-active-color:           $gray-600 !default;
+$breadcrumb-bg:                     #fff !default;
+// $breadcrumb-divider-color:          $primary !default;
+$breadcrumb-active-color:           $primary !default;
 // $breadcrumb-divider:                quote("/") !default;
 
 // // $breadcrumb-border-radius:          $border-radius !default;
