--- a/sourse/sass/_vars.scss
+++ b/sourse/sass/_vars.scss
@@ -881,8 +881,8 @@ $custom-file-text: (en: "Browse"
 
 // // Breadcrumbs
 
-// $breadcrumb-padding-y:              .75rem !default;
-// $breadcrumb-padding-x:              1rem !default;
+$breadcrumb-padding-y:              1.3rem !default;
+$breadcrumb-padding-x:              1.8rem !default;
 // $breadcrumb-item-padding-x:         .5rem !default;
 
 // $breadcrumb-margin-bottom:          1rem !default;
