--- a/sourse/pug/blocks/s-form/_s-form.scss
+++ b/sourse/pug/blocks/s-form/_s-form.scss
@@ -1,4 +1,4 @@
-.s-form, .s-form2 {
+.s-form {
 	background-color: #f7f7f7;
 
 	@include media-breakpoint-up(lg) {
@@ -31,6 +31,7 @@
 	}
 
 	.form-wrap {
+
 		&__input {
 			background-color: #f7f7f7;
 		}
@@ -84,6 +85,53 @@
 		}
 	}
 
+	&--2 {
+		@include media-breakpoint-up(lg) {
+			padding-top: rem(10) !important;
+		}
+		h2 {
+			@include media-breakpoint-up(lg) {
+				padding-top: rem(90);
+			}
+			padding-bottom: rem(20);
+		}
+
+		h5 {
+			@extend h5;
+			padding-bottom: rem(5);
+		}
+		textarea {
+			width: 100%;
+			resize: none;
+			height: rem(135);
+			background-color: transparent;
+			padding: rem(20);
+			line-height: 1.5;
+			margin-bottom: rem(25);
+		}
+		.form-wrap {
+
+			&__group {
+				padding-bottom: rem(26);
+				&-title {
+				padding-bottom: rem(7);
+				}
+			}
+			&__btn {
+				min-height: rem(75);
+				border-radius: $border-radius-lg;
+				margin-bottom: rem(20);
+			}
+		}
+		.s-form__label { // Запись не правильная
+			left: rem(35);
+			top: rem(615); //ОЧЕНЬ СИЛЬНО СОМНЕВАЮСЬ
+			&-prof {
+				padding-left: rem(55);
+				padding-right: rem(55);
+			}
+		}
+	}
 	//
 	@include media-breakpoint-up(xl) {}
 
