--- a/public/img/svg/_sprite.scss
+++ b/public/img/svg/_sprite.scss
@@ -21,6 +21,10 @@
 	font-size:(500/10)*1rem;
 	width:(500/500)*1em;
 }
+.icon-email {
+	font-size:(24/10)*1rem;
+	width:(24/24)*1em;
+}
 .icon-fire {
 	font-size:(500/10)*1rem;
 	width:(500/500)*1em;
@@ -40,6 +44,10 @@
 .icon-tel {
 	font-size:(402/10)*1rem;
 	width:(402/402)*1em;
+}
+.icon-telegram {
+	font-size:(24/10)*1rem;
+	width:(24/24)*1em;
 }
 .icon-viber {
 	font-size:(40/10)*1rem;
