--- a/sourse/pug/blocks/top-nav/_top-nav.pug
+++ b/sourse/pug/blocks/top-nav/_top-nav.pug
@@ -51,7 +51,7 @@ mixin top-nav()
 						+e.dropdown--menu-top
 							+b.menu-top
 								ul
-									li.current-menu-item: a(href="#") 
+									li.current-menu-item: a.scroll-link(href="#s-qwiz") 
 										+icon("safety-box")
 										| Подобрать сейф
 									li: a(href="#") Доставка и оплата
