--- a/sourse/pug/pages/index.pug
+++ b/sourse/pug/pages/index.pug
@@ -28,6 +28,6 @@ block pagecontent
 			h2 Самые популярные модели сейфов
 	+s-pdf
 	+s-steps
-	+s-form()
-	+s-video
+	+s-form()(class="section-border ")
+	+s-video()(class="section-border ")
 	+footer()
