--- a/sourse/pug/blocks/form-wrap/form-wrap.scss
+++ b/sourse/pug/blocks/form-wrap/form-wrap.scss
@@ -124,8 +124,13 @@
 			display: flex;
 			align-items: center;
 			justify-content: center;
+			@include mt;
 
-			&:hover,
+			&:hover {
+
+				border-color: #398bff;
+			}
+
 			&.active {
 				border-color: #0075ff;
 				box-shadow: inset 0 0 0 1px #0075ff;
@@ -193,6 +198,7 @@
 
 .toggle-wrap-input-js {
 	display: none;
+	padding-top: rem(10);
 }
 
 
@@ -407,4 +413,84 @@
 
 .select2-container--default .select2-results__option--highlighted[aria-selected] {
 	background-color: $success;
+}
+
+
+.custom-input-time {
+	cursor: pointer;
+	width: calc(100% + #{rem(10)});
+
+
+
+
+	display: flex !important;
+	font-weight: 500;
+	// justify-content: center;
+	align-items: center;
+	text-align: center;
+	z-index: 2;
+	position: relative;
+	overflow: hidden;
+	// text-shadow: 0 2px 0 rgba(255, 255, 255, 0.53);
+	color: #000000;
+	font-size: rem(15);
+	margin-left: rem(-5);
+	margin-right: rem(-5);
+
+	&__text {
+		margin-left: rem(5);
+		margin-right: rem(5);
+		width: 50%;
+		display: block;
+		padding: 5px;
+		@include mt;
+		border-radius: 2px;
+		border: 1px solid #dfdfdf;
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		@include mt;
+
+		&:hover {
+			border: 1px solid #0075ff;
+		}
+
+		@include media-breakpoint-up(sm) {
+
+			height: rem(58);
+		}
+
+		height: rem(52);
+
+		&--now {
+			// color: #ffffff;
+			border: 1px solid #0075ff;
+		}
+	}
+
+	&__input {
+		position: absolute;
+		// opacity: 0;
+		width: 1px;
+		height: 1px;
+		margin: -1px;
+		border: 0;
+		padding: 0;
+		clip: rect(0 0 0 0);
+		overflow: hidden;
+	}
+
+
+	&__input:checked~&__text--now {
+		//  left: calc(50% + 5px);
+		// color: $body-color;
+		border: 1px solid #dfdfdf;
+	}
+
+	&__input:checked~&__text--time {
+		border: 1px solid #0075ff;
+		//  left: calc(50% + 5px);
+		// color: #fff;
+	}
+
 }
