--- a/sourse/pug/blocks/s-video/_s-video.pug
+++ b/sourse/pug/blocks/s-video/_s-video.pug
@@ -2,8 +2,17 @@ mixin s-video()
 	// start s-video
 	+b.SECTION.s-video.section#s-video&attributes(attributes)
 		.container
-			+b.section-title.text-center
-				h2 s-video
+			+e.block(href="https://www.youtube.com/watch?v=en6gms6e54Q&list=PLIU76b8Cjem5B3sufBJ_KFTpKkMEvaTQR"  data-fancybox="video-gal")
+				+e.DIV.inner
+					.row
+						+e.col.col
+							+e.DIV.title Посмотрите видео
+							p #[strong  и&nbsp;узнайте, как выбрать сейф] для дома&nbsp;&mdash; Александр все подробно рассказал
+						.col
+							+e.DIV.btn
+								+e.DIV.btn-inner
+							+e.DIV.time Время просмотра
+								br
+								| 2:14 мин
 				
-			.row
 	// end s-video
