--- a/sourse/pug/blocks/top-line/_top-line.scss
+++ b/sourse/pug/blocks/top-line/_top-line.scss
@@ -1,10 +1,77 @@
 .top-line {
   padding-top: rem(17);
   padding-bottom: rem(10);
+  z-index: 2;
 
   &__basket {
+    z-index: 4;
+
     .icon {
       font-size: rem(35);
+    }
+
+    position: relative;
+  }
+
+  &__basket:hover &__basket-empty {
+    opacity: 1;
+    pointer-events: painted;
+    z-index: 10;
+  }
+
+  &__basket-count {
+    position: absolute;
+    bottom: rem(-5);
+    right: rem(-5);
+    width: rem(23px);
+    height: rem(23px);
+    border-radius: 50%;
+    background-color: #7ced91;
+    text-align: center;
+    color: #3d3d3d;
+    font-family: "Open Sans";
+    line-height: 1.38;
+    // Text style for "1"
+    letter-spacing: 0.32px;
+
+  }
+
+  &__basket-empty {
+    position: absolute;
+    top: 100%;
+    left: 0;
+    font-weight: 500;
+    padding: rem(11) rem(30);
+    box-shadow: 3px 3px 35px rgba(154, 187, 206, 0.17);
+    background-color: #ffffff;
+    min-width: rem(170);
+    border: 1px solid #eee;
+    border-radius: 5px;
+    opacity: 0;
+    z-index: -1;
+    pointer-events: none;
+    text-align: center;
+
+    &:after,
+    &:before {
+      bottom: 100%;
+      left: rem(14);
+      border: solid transparent;
+      content: " ";
+      height: 0;
+      width: 0;
+      position: absolute;
+      pointer-events: none;
+    }
+
+    &:after {
+      @include triangle(15px, #fff, up);
+    }
+
+    &:before {
+      @include triangle(17px, #eee, up);
+      margin-left: -1px;
+
     }
   }
 
