--- a/sourse/sass/_base.scss
+++ b/sourse/sass/_base.scss
@@ -12,6 +12,7 @@ html {
 	overflow: hidden;
 	width: 100%;
 	height: 100%;
+	// background-position: center -168px;
 	background-position: center 0;
 	opacity: 0;
 	// opacity: 0.7;
@@ -19,6 +20,8 @@ html {
 
 body,
 html {
+	// min-height: 8000px;
+
 	@media (min-width: 1200px) {
 
 		font-size: $em-base;
@@ -637,7 +640,7 @@ h4 {
 	min-height: rem(75);
 	font-size: $h5-font-size;
 
-	&.btn-lg {
+	bdras &.btn-lg {
 
 		min-height: rem(90);
 	}
