--- a/sourse/sass/_base.scss
+++ b/sourse/sass/_base.scss
@@ -15,7 +15,7 @@ html {
 	// background-position: center -168px;
 	background-position: center 0;
 	opacity: 0;
-	opacity: 0.7;
+	// opacity: 0.7;
 }
 
 body,
